--- a/ebook-reader-backend/requirements.txt
+++ b/ebook-reader-backend/requirements.txt
@@ -6,10 +6,12 @@ colorama==0.4.6
 Flask==3.1.2
 flask-cors==6.0.1
 gTTS==2.5.4
+gunicorn==23.0.0
 idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
+packaging==25.0
 requests==2.32.5
 urllib3==2.5.0
 Werkzeug==3.1.3
